<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/idRLTopNavbar"
        android:visibility="visible"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="20dp"
        >

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/img_clouds_black"
            android:padding="10dp"
            android:id="@+id/idIVWeatherNav"
            />

    </RelativeLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/idEdtTo"
        android:hint="@string/MailTo"
        android:padding="12dp"
        android:background="@drawable/bg_round"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/idEdtSubject"
        android:hint="@string/MailSubject"
        android:padding="12dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_round"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/idEdtMessage"
        android:hint="@string/MailMessage"
        android:padding="12dp"
        android:gravity="top"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_round"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/idBtnSend"
        android:text="@string/MailBtn"
        android:layout_marginTop="8dp"/>

</LinearLayout>