<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_shade_1">

    <ProgressBar
        android:id="@+id/idPBLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/idRLHome"
        android:visibility="visible"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/day"
            android:id="@+id/idIVBack"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/idRLTopNavbar"
            android:visibility="visible"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp"
            >

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentStart="true"
                android:src="@drawable/img_mail_black"
                android:padding="10dp"
                android:id="@+id/idIVMailNav"
                />

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/img_contact_black"
                android:padding="10dp"
                android:id="@+id/idIVContactNav"
                />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city_name"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_marginTop="70dp"
            android:padding="20dp"
            android:textSize="18sp"
            android:id="@+id/idTVCityName" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Country"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:padding="20dp"
            android:textSize="14sp"
            android:id="@+id/idTVCountryName"
            android:layout_below="@id/idTVCityName"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/idLLEdt"
            android:layout_below="@id/idTVCountryName"
            android:weightSum="5" >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/idTILCity"
                android:layout_margin="10dp"
                android:layout_weight="4.5"
                android:background="@android:color/transparent"
                android:hint="@string/enter_city_name"
                android:padding="5dp"
                app:hintTextColor="@color/white"
                android:textColorHint="@color/white" >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/idEdtCity"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:background="@android:color/transparent" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:id="@+id/idIVSearch"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_search"
                app:tint="@color/white" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/idTVTemperature"
            android:layout_below="@id/idLLEdt"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="23"
            android:textColor="@color/white"
            android:textSize="70dp" />

        <TextView
            android:id="@+id/idTVCondition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idTVTemperature"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/condition"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/idIVCondition"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/idTVCondition"
            android:layout_centerInParent="true"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/idRvWeather"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/hourly_weather_forecast"
            android:textColor="@color/white"
            android:textStyle="bold" />
        
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/idRvWeather"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </RelativeLayout>
    




</RelativeLayout>